fixed styling on game container and spacing, added key to save message and limit to last 100 messages shown

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -8,13 +8,20 @@ main, #messages-card {
 #messages-card-container {
   height: calc(100% - 35px);
   padding-bottom: 0;
+  padding-top: 0;
+}
+#game-container {
+  height: 100%;
+  max-height: 400px;
 }
 #messages-card {
   margin-top: 15px;
+  max-height: 300px;
 }
 #userlist-card {
   margin-top: 15px;
   padding: 8px;
+  max-height: 300px;
 }
 #userlist-card span {
   font-size: 1.5rem;
@@ -119,7 +126,6 @@ main, #messages-card {
 }
 .mdl-card {
   min-height: 0;
-  max-height: 300px;
 }
 .mdl-card {
   background: linear-gradient(white, #f9f9f9);
